--- a/apps/poster/src/components/header.module.css
+++ b/apps/poster/src/components/header.module.css
@@ -1,6 +1,9 @@
 .header {
-  position: relative;
-  flex-shrink: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
   box-sizing: border-box;
 
   display: flex;
